# sage_release

./: .gitignore  LICENSE  README.md  online_appendix.md
paper_sage/: Makefile
paper_sage/dataset_release/: DATASHEET.md  EDGE_RESULTS.md  JETSON_EDGE_PLAN.md  LICENSE_NOTES.md  REPRODUCE.md
paper_sage/scripts/: _server_parity.sh  alfworld_adapter.py  analyze_edge.py  analyze_grid.py  analyze_long_exp.py  analyze_predictive.py  analyze_safety_gate.py  auto_partial_score.py  build_procthor_dataset.py  capture_microwave_frame.py  capture_thor_frames.py  check_sota.py  collect_alfworld_v2.py  collect_transitions.py  collect_transitions_alfworld.py  eai_export.py  eai_export_selftest.py  evaluate_alfworld.py  expand_dataset.py  gen_completeness_table.py  gen_compound_table.py  gen_compound_tasks.py  gen_drawio.py  gen_fig1_storyboard.py  gen_fig2_overview.py  gen_figures.py  gen_impact_figure.py  gen_latex_table.py  gen_pipeline_figure.py  gen_recovery_table.py  gen_supplementary.py  (+17 more)
pyplanner/: CLAUDE.md  README.md  eval_dataset_expanded.json  eval_dataset_gt.json  eval_dataset_procthor.json  pyproject.toml  setup.py
pyplanner/apps/: make_dataset.py  procthor_server.py  sim_client.py  thor_server.py
pyplanner/apps/evaluate/: evaluate.py  evaluate_sim.py  goal_checker.py  make_dataset_from_sim.py  record_reference.py
pyplanner/pyplanner/: __init__.py  base.py  cot.py  direct.py  few_shot.py  few_shot_examples.py  hierarchical.py  llm_router.py  llmp.py  memory_retriever.py  my_planner.py  react.py  sage.py  saycan.py  self_refine.py  utils.py  verifier.py
(+8 files in other folders)
