[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "pyplanner"
version     = "0.1.0"
description = "Pluggable LLM task planner for household robotics (AI2-THOR + Ollama)"
readme      = "README.md"
requires-python = ">=3.10"
license     = { text = "MIT" }

dependencies = [
    "ollama>=0.2.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["pyplanner*"]
